[package]
name = "connectivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
port_check = { version = "0.1.5", git = "https://github.com/ufoscout/port-check-rs.git" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82", default-features = false, features = ["alloc"] }
