[package]
name = "connectivity"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.1", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.11.13", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tls", "json"] }
scraper = "0.14.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.91", default-features = false, features = ["alloc"] }
tokio = { version = "1.23.0", features = ["full"] }
